--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-netlify-cms": "^1.0.6"
+  },
+  "resolutions": {
+    "gatsby-plugin-netlify-cms/netlify-cms": "1.1.0"
   }
 }
